# bt-solar-monitor

./: .eslintrc.json  .gitignore  .gitmodules  .travis.yml  Notes.md  README.md  Rakefile  git-crypt-key.key.enc  gulpfile.js  gulpfile_bak_1.js  gulpfile_bak_2.js  package-lock.json  package-lock_bak_1.json  package.json  package_bak_1.json  secrets.json
fw/: .cproject  .project  CMakeLists.txt  README.md  project.properties
fw/apps/SolarMonitor/: README.md  project.properties
fw/apps/SolarMonitor/src/: SolarMonitor.cpp
fw/apps/SolarMonitor_org/src/: BtSolarMonitor.inc.h  Spike_CloudSignalStrengh.inc.h  Spike_HelloParticle.inc.h  Spike_VeBridge.inc.h
fw/apps/SpikeLogging/: README.md  project.properties
fw/apps/SpikeLogging/src/: SpikeLogging.cpp
fw/lib/Adafruit_GFX/src/: Adafruit_GFX.cpp  Adafruit_GFX.h
fw/lib/Adafruit_PCD8544/src/: Adafruit_PCD8544.h
fw/lib/BtCore/: README.md  library.properties
fw/lib/BtCore/mock/: PlatformMock.cpp  PlatformMock.h
fw/lib/BtCore/mock/Bt/Core/: RunnableGMock.h  TimeGMock.h
fw/lib/BtCore/src/: BtCore.h
fw/lib/BtCore/src/Bt/Core/: CircularBuffer.cpp  Cloud.cpp  Cloud.h  I_PushButton.h  I_Runnable.h  I_Time.hpp  I_Workcycle.h  InterruptPushButton.cpp  InterruptPushButton.h  IntrusiveList.h  Log.h  PeriodicCallback.h  PlacementPointer.cpp  Platform.cpp  Platform.h  PushButton.cpp  PushButton.h  Result.h  Scheduling.cpp  Scheduling.h  Singleton.cpp  Singleton.h  StateMachine.cpp  StateMachine.h  StrCmp.h  Time.cpp  Time.h  Timer.h  Workcycle.cpp  Workcycle.h
fw/lib/BtCore/src/Bt/Drivers/: PowerManagment.h
fw/lib/BtCore/src/Bt/Encoding/: Base64.cpp  Base64.h  Z85.cpp  Z85.h
fw/lib/BtCore/src/Bt/Net/: Base64.cpp  Base64.h  Cloud.cpp  Cloud.h
fw/lib/BtCore/src/Bt/Sensors/: INA219.h  SensorArray.h
fw/lib/BtCore/src/Bt/Sensors/VeDirect/: CommandExecutor.cpp  GetCommand.cpp  GetCommand.h  Register.h  Registers.cpp  Registers.h  SetCommand.cpp  Utility.cpp  Utility.h
fw/lib/BtCore/src/Bt/SolarMonitor/: Averaging.cpp  Averaging.h  AveragingFilter.h  ConvertFilter.cpp  ConvertFilter.h  DisplayFilter.h  FilterBase.h  ForkFilter.h  LogFilter.h  LogHandler.cpp  LogHandler.h  MeasurementRecord.cpp  MeasurementRecord.h  MenuController.cpp  MenuController.h  MessageBufferSink.cpp  MessageBufferSink.h  MessageFilter.cpp  MessageFilter.h  PublishFilter.h  Reader.cpp  Reader.h  ValidateFilter.h
fw/lib/BtCore/src/Bt/SolarMonitor/Cli/: CliController.cpp  CliController.h  Command.cpp  Command.h  CommandRepository.cpp  CommandRepository.h  Tokenizer.cpp
fw/lib/BtCore/src/Bt/SolarMonitor/Ui/: Display.cpp  Display.h  Icon.cpp  Icon.h  Icons.cpp  Icons.h  ReadingsView.cpp  ReadingsView.h  ViewsController.cpp  ViewsController.h
fw/lib/BtCore/test/: CMakeLists.txt
fw/lib/BtCore/test/Bt/Core/: CircularBufferTest.cpp  IntrusiveListTest.cpp  UtilityTest.cpp  WorkcycleTest.cpp
fw/lib/BtCore/test/Bt/Encoding/: Z85Test.cpp
fw/lib/BtCore/test/Bt/Sensors/VeDirect/: GetCommandTest.cpp  UtilityTest.cpp
fw/lib/BtCore/test/Bt/SolarMonitor/: MessageFilterTest.cpp
fw/lib/BtCore/test/Bt/SolarMonitor/Cli/: TokenizerTest.cpp
fw/lib/Sensors/: README.md  library.properties
fw/lib/Sensors/examples/usage/: usage.ino
fw/lib/Sensors/src/: Sensors.cpp
fw/lib/Sensors/src/Bt/Core/: Log.cpp  Log.h  Sleep.cpp
fw/lib/Sensors/src/Bt/Encoding/: Z85.h
fw/lib/Sensors/src/Bt/Sensors/: INA219.cpp  INA219.h  SensorArray.cpp  SensorArray.h
fw/lib/Sensors/src/Bt/SolarMonitor/: Averaging.cpp  AveragingFilter.cpp  AveragingFilter.h  DisplayFilter.cpp  DisplayFilter.h  ForkFilter.cpp  Measurement.cpp  Measurement.h  MeasurementRecord.h  MessageFilter.cpp  MessageFilter.h  StorageFilter.cpp  StorageFilter.h  ValidateFilter.cpp  ValidateFilter.h
fw/lib/Sensors/test/Bt/Encoding/: Z85Test.cpp
fw/lib/nokia-5110-lcd/: library.properties
fw/lib/nokia-5110-lcd/examples/example/: example.cpp
fw/lib/nokia-5110-lcd/src/: nokia-5110-lcd.cpp  nokia-5110-lcd.h
fw/lib/nokia-5110-lcd/src/nokia-5110-lcd/: nokia-5110-lcd.h
fw/shared/lib/BtCore/: LICENSE
fw/shared/lib/BtCore/mock/: PlatformMock.cpp  PlatformMock.h
fw/shared/lib/BtCore/mock/Bt/Core/: RunnableGMock.h
fw/shared/lib/BtCore/src/: BtCore.cpp
fw/shared/lib/BtCore/src/Bt/Core/: CircularBuffer.h  I_DigitalIn.h  I_SchedulingListener.h  I_Time.h  I_Workcycle.h  InterruptPushButton.cpp  InterruptPushButton.h  IntrusiveList.cpp  Log.h  PeriodicCallback.cpp  PlacementPointer.h  Platform.h  Sleep.cpp  Sleep.h  StrCmp.cpp  StrCmp.h  Time.h  (+4 more)
fw/shared/lib/BtCore/test/Bt/: TestLogger.cpp  TestLogger.h
fw/src/: BtSolarMonitor.cpp  BtSolarMonitor.inc.h  Main.cpp  Spike_BuildUp.inc.h  Spike_CloudSignalStrengh.inc.h  Spike_DataUsage.inc.h  Spike_Display.inc  Spike_Display.inc.h  Spike_HelloParticle.inc.h  Spike_HelloWorld.inc.h  Spike_InterruptPushButton.inc.h  Spike_ReadingsView.inc.h  Spike_SleepPinWakeup.inc.h  Spike_VeBridge.inc  Spike_VeTest.inc  Spike_VeTest.inc.h
(+91 files in other folders)
